welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:24: error: not found: value getMondeHautteur
    if (j<getMondeHautteur()) {avance()};
          ^